Upload individual HealthKit samples into private activity pipeline
